[gd_scene load_steps=6 format=4 uid="uid://bdbb6p72yrc5y"]

[ext_resource type="PackedScene" uid="uid://b46qouyu3lx2m" path="res://scenes/windows/window_base.tscn" id="1"]
[ext_resource type="Script" uid="uid://bt31idrxj20kn" path="res://scenes/windows/window_network_limiter.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://cg586yygoedcw" path="res://textures/icons/stop.png" id="3"]
[ext_resource type="PackedScene" uid="uid://co5icrrrwscgg" path="res://scenes/input_container.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://b4efojcll7i7" path="res://scenes/output_container.tscn" id="5"]

[node name="WindowBase" instance=ExtResource("1")]
offset_bottom = 281.0
script = ExtResource("2")
window = "network_limiter"

[node name="Icon" parent="TitlePanel/TitleContainer" index="0"]
texture = ExtResource("3")

[node name="Title" parent="TitlePanel/TitleContainer" index="1"]
text = "Network Limiter"

[node name="MainContainer" type="VBoxContainer" parent="PanelContainer" index="0"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 10

[node name="Download" type="VBoxContainer" parent="PanelContainer/MainContainer" index="0"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 10

[node name="Splitting" parent="PanelContainer/MainContainer/Download" index="0" instance=ExtResource("4")]
layout_mode = 2
default_resource = "download_speed"
limit = -1.0

[node name="RatioContainer" type="VBoxContainer" parent="PanelContainer/MainContainer/Download" index="1"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="RatioLabelContainer" type="HBoxContainer" parent="PanelContainer/MainContainer/Download/RatioContainer" index="0"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="PanelContainer/MainContainer/Download/RatioContainer/RatioLabelContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "ratio"

[node name="RatioLabel" type="Label" parent="PanelContainer/MainContainer/Download/RatioContainer/RatioLabelContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "5 : 5"
horizontal_alignment = 2

[node name="RatioSlider" type="HSlider" parent="PanelContainer/MainContainer/Download/RatioContainer" index="1"]
layout_mode = 2
focus_mode = 0
min_value = 0.1
max_value = 0.9
step = 0.1
value = 0.5
scrollable = false
tick_count = 5

[node name="Splitted" parent="PanelContainer/MainContainer/Download" index="2" instance=ExtResource("5")]
layout_mode = 2
default_resource = "download_speed"
limit = -1.0

[node name="Splitted2" parent="PanelContainer/MainContainer/Download" index="3" instance=ExtResource("5")]
layout_mode = 2
default_resource = "download_speed"
limit = -1.0

[node name="Upload" type="VBoxContainer" parent="PanelContainer/MainContainer" index="1"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 10

[node name="Splitting" parent="PanelContainer/MainContainer/Upload" index="0" instance=ExtResource("4")]
layout_mode = 2
default_resource = "upload_speed"
limit = -1.0

[node name="RatioContainer" type="VBoxContainer" parent="PanelContainer/MainContainer/Upload" index="1"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="RatioLabelContainer" type="HBoxContainer" parent="PanelContainer/MainContainer/Upload/RatioContainer" index="0"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="PanelContainer/MainContainer/Upload/RatioContainer/RatioLabelContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "ratio"

[node name="RatioLabel" type="Label" parent="PanelContainer/MainContainer/Upload/RatioContainer/RatioLabelContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "5 : 5"
horizontal_alignment = 2

[node name="RatioSlider" type="HSlider" parent="PanelContainer/MainContainer/Upload/RatioContainer" index="1"]
layout_mode = 2
focus_mode = 0
min_value = 0.1
max_value = 0.9
step = 0.1
value = 0.5
scrollable = false
tick_count = 5

[node name="Splitted" parent="PanelContainer/MainContainer/Upload" index="2" instance=ExtResource("5")]
layout_mode = 2
default_resource = "upload_speed"
limit = -1.0

[node name="Splitted2" parent="PanelContainer/MainContainer/Upload" index="3" instance=ExtResource("5")]
layout_mode = 2
default_resource = "upload_speed"
limit = -1.0

[connection signal="drag_ended" from="PanelContainer/MainContainer/Download/RatioContainer/RatioSlider" to="." method="_on_download_ratio_slider_drag_ended"]
[connection signal="resource_set" from="PanelContainer/MainContainer/Upload/Splitting" to="." method="_on_splitting_resource_set"]
[connection signal="drag_ended" from="PanelContainer/MainContainer/Upload/RatioContainer/RatioSlider" to="." method="_on_upload_ratio_slider_drag_ended"]
